--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -31,9 +31,9 @@ $background-opacity: 0.9;
 // Set text color
 @function set-text-color($color) {
     @if (lightness($color) > 40) {
-        @return '#000';
+        @return #000;
     } @else {
-        @return '#444';
+        @return #fff;
     }
 }
 
